tech: DTO refactor, use records
