# microservices/incident/openapi/incident-api.yaml
@@ -579,6 +579,10 @@ components:
         incidentDate:
           type: string
           format: date-time
+        estimatedDamage:
+          type: number
+        currency:
+          type: string
         createdAt:
           type: string
           format: date-time
@@ -596,10 +600,6 @@ components:
           format: int32
         pageable:
           $ref: "#/components/schemas/PageableObject"
-        first:
-          type: boolean
-        last:
-          type: boolean
         size:
           type: integer
           format: int32
@@ -612,6 +612,10 @@ components:
           format: int32
         sort:
           $ref: "#/components/schemas/SortObject"
+        first:
+          type: boolean
+        last:
+          type: boolean
         empty:
           type: boolean
     PageableObject:
